--- a/public/styles.css
+++ b/public/styles.css
@@ -29,7 +29,7 @@ body {
     
 }
 h1 {
-    font-family: "Jacquard 24", system-ui;
+    font-family: "Pirata One", system-ui;
     color: #F0BD75;
     font-size: 2.5em;
     text-align: center;
@@ -45,7 +45,7 @@ h1 {
 }
 
 .search-btn {
-    font-family: "Jersey 10", sans-serif;
+    font-family: "Cormorant Unicase", serif;
     font-size: .7em;
     letter-spacing: 2px;
     color: #240000;
@@ -57,29 +57,33 @@ h1 {
     border: none;
 }
 
+
 /* --- DATA RESPONSE ---*/
 
 .random-btn {
     display: block;
     background-color: rgb(0, 124, 213);
     color: #fff;
-    font-family: "Jersey 10", sans-serif;
+    font-family: "Cormorant Unicase", serif;
     letter-spacing: 2px;
-    font-size: .7em;
+    font-size: .5em;
+    text-align: center;
     font-weight: bold;
     padding: 10px 20px;
-    width: 200px;
+    width: 250px;
     margin: 0 auto;
     outline: none;
     cursor: pointer;
-    
 }
+
+
 .list-random {
     display: block;
     padding: 20px;
     text-align: center;
     color: #fff;
 }
+
 
 /*----- RESPONSE -----*/
 .result {
@@ -92,4 +96,9 @@ h1 {
     max-width: 100%;
     height: 300px;
     background-color: #F0BD75;
+}
+/* ---- RANDOM ----*/
+
+.random-name {
+    font-family: "Jersey 10", sans-serif;
 }
