--- a/public/styles.css
+++ b/public/styles.css
@@ -213,6 +213,7 @@ select option {
     width: 100%;
     text-align: left;
     list-style-type: none;
+    box-sizing: border-box;
 }
 
 .random-name {
@@ -229,6 +230,7 @@ select option {
     font-weight: 400;
     line-height: 26px;
     color: #1E0400;
+    word-break: break-all;
 }
 
 
