--- a/public/styles.css
+++ b/public/styles.css
@@ -214,6 +214,7 @@ select option {
     text-align: left;
     list-style-type: none;
     box-sizing: border-box;
+    word-break: break-word;
 }
 
 .random-name {
